--- a/style.css
+++ b/style.css
@@ -156,15 +156,44 @@ textarea:focus-visible {
 
 .keyboard {
 	flex-grow: 1;
+    align-self: center;
+    justify-self: center;
+    width: 80%;
+    text-align: center;
 }
 
 
 .button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 	background-color: transparent;
-	color: #7e4e04;
 	border: 1px solid #7e4e04;
 	border-radius: 3px;
 	cursor: pointer;
+    height: 45px;
+    width: 6%;
+    max-width: 90px;
+    margin: 3px;
+    color: #7e4e04;
+    font-size: 1rem;
+    position: relative;
+}
+
+
+
+
+.button-wider {
+    min-width: fit-content;
+}
+
+.button-space {
+    min-width: 33%;
+}
+
+.button-darker {
+    background-color:#d8b99c;
+    
 }
 
 .button:hover {
@@ -174,7 +203,32 @@ textarea:focus-visible {
 
 .button-pressed {
 	background-color: #7e4e04;
+    color: #ece2d6;
     transition: 0.5s;
+}
+
+.upTextButton {
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    color: #7e4e04;
+    font-size: 0.6rem;
+    margin: 0px auto auto 0px;
+}
+
+.capsLock-on {
+    background-color: #7e4e04;
+    color: #ece2d6;
+    transition: 0.5s;
+}
+
+.big-letters {
+    text-transform: uppercase;
+}
+
+.capsLock-on:hover {
+    transition: 0.5s;
+	background-color:#b08864;
 }
 
 
@@ -191,7 +245,7 @@ textarea:focus-visible {
     margin-left: 0px;
     list-style-type: none;
     align-items: baseline;
-
+    padding-top: 1vh;
 }
 
 .nav-list-footer li {
@@ -222,6 +276,26 @@ textarea:focus-visible {
     height: 15px;
     margin-left: 5px;
 	opacity: 40%;
+}
+
+
+
+@media (max-width: 1155px) {
+    .keyboard {
+        width: 100%;
+    }
+
+    .button {
+        height: 30px;
+        width: 6%;
+        max-width: 90px;
+        margin: 1px;
+        font-size: 0.6rem;
+    }
+
+    .upTextButton {
+        font-size: 0.3rem;
+    }
 }
 
 
